updated the products listing and who endpoints
